# zellij-load

./: Cargo.toml  README.md  default.kdl  justfile
.github/workflows/: release.yml
src/system_info/: cpu.rs  gpu.rs  info.rs  mem.rs  mod.rs
