[package]
name = "zellij-load"
version = "0.1.0"
authors = ["Christian Prather"]
edition = "2024"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

[dependencies]
# Plugin dependencies
zellij-tile = {version = "0.43.1", optional = true}
colored = {version = "3.0.0", optional = true}
regex = {version = "1.9.4", optional = true}

# Shared dependencies
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = { version = "1.0", features = ["std"] }

# Daemon dependencies
clap = { version = "4.0", features = ["derive"], optional = true }
sysinfo = { version = "0.37.2", optional = true }
tokio = { version = "1.35", features = ["sync","macros","io-util","rt","time", "rt-multi-thread","signal"], optional = true }
single-instance = {version = "0.3.3", optional = true}
gfxinfo = {version = "0.1.2", optional = true}
glob = {version = "0.3", optional = true}

[features]
native = ["clap", "sysinfo", "tokio", "single-instance", "gfxinfo", "glob"]
plugin = ["zellij-tile", "colored", "regex"]

[[bin]]
name = "plugin"
path = "src/bin/plugin.rs"
required-features = ["plugin"]

[[bin]]
name = "zellij_system_monitor"
path = "src/bin/zellij-system-monitor.rs"
required-features = ["native"]
